--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
+    "@nuxtjs/axios": "^5.13.6",
+    "@pinia/nuxt": "^0.5.1",
+    "@vee-validate/nuxt": "^4.12.6",
     "axios": "^1.6.8",
+    "cookie-universal-nuxt": "^2.2.2",
     "firebase": "^10.9.0",
     "jose": "^5.2.3",
     "nuxt": "^3.10.3",
+    "pinia": "^2.1.7",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.19",
     "vue-axios": "^3.5.2",
