--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jose": "^5.2.3",
     "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
+    "primevue": "^3.52.0",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.19",
     "vue-axios": "^3.5.2",
