--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue": "^3.4.19",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.3.0",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.18",
