--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.5.1",
     "@vee-validate/nuxt": "^4.12.6",
+    "@vee-validate/zod": "^4.13.1",
     "axios": "^1.6.8",
     "cookie-universal-nuxt": "^2.2.2",
     "firebase": "^10.9.0",
@@ -21,7 +22,7 @@
     "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
     "primevue": "^3.52.0",
-    "vee-validate": "^4.12.6",
+    "vee-validate": "^4.13.1",
     "vue": "^3.4.19",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.3.0",
@@ -33,6 +34,7 @@
     "nuxt-icon": "^0.6.8",
     "nuxt-primevue": "^0.3.1",
     "postcss": "^8.4.35",
+    "sass": "^1.77.4",
     "tailwindcss": "^3.4.1"
   }
 }
